--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
             	</p>
             </div>
           </div>
+        <div class="row">
+        	<div class="col offset-s6 s6"><a href="https://github.com/saurav-bhagat/Number-guess-Game"><span class="flow-text">Check source code here</span></a></div>
+        </div>
+    </div>
+
+
 
 
 	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
