--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
             	</p>
             </div>
           </div>
+          <br><br>
         <div class="row">
-        	<div class="col offset-s6 s6"><a href="https://github.com/saurav-bhagat/Number-guess-Game"><span class="flow-text">Check source code here</span></a></div>
+        	<div class="col"><a href="https://github.com/saurav-bhagat/Number-guess-Game"><span class="flow-text">Check source code here</span></a></div>
         </div>
     </div>
 
